--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,17 @@
 // All Variables
 
 // Colors
+$primary-color: #3d6098;
+$primary-color-dark: #213159;
+$accent-color: #f04b4c;
+$bg-primary: #e7e7e7;
+$warning-color: #ffcc00;
+$warning-transparent: #ffcc006e;
+$danger-color: #df4759;
+$danger-transparent: #df47596e;
+$success-color: #42ba96;
+$success-transparent: #42ba966e;
+
 
 
 // Dimensions
