--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    background-color: $primary-color-dark;
 
     .logo {
         width: 200px;
@@ -21,5 +22,17 @@ header {
     .menu {
         display: flex;
         align-items: center;
+        justify-content: center;
+
+        a {
+            color: #fff;
+            margin-right: 1rem;
+            transition: all 0.3s ease;
+        }
+
+        a:hover {
+            color: $accent-color;
+            transform: scale(.98);
+        }
     }
 }
