--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@ header {
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-	background-color: $primary-color-dark;
+	background-color: #fff;
 	border-bottom: 1px solid $primary-color;
 
 	.logo {
@@ -27,7 +27,7 @@ header {
 		justify-content: center;
 
 		a {
-			color: #fff;
+			color: #000;
 			margin-right: 1rem;
 			transition: all 0.3s ease;
 		}
@@ -245,5 +245,44 @@ header {
 }
 
 footer {
-    height: 20vh;
+    img {
+        object-fit: cover;
+    }
+
+    .footer-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        a i{
+            transition: all 0.3s ease;
+        }
+
+        a:hover {
+            text-decoration: none;
+        }
+
+        a:hover i{
+            transform: scale(1.15);
+        }
+
+        a i {
+            font-size: 2rem;
+            margin-right: 1rem;
+        }
+    }
+
+    .strip {
+        background-color: $bg-primary;
+
+        a {
+            color: $accent-color;
+        }
+
+        .languages {
+            font-size: 2.5rem;
+        }
+    }
+
 }
