--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'config';
 @import 'base';
 @import 'buttons';
+@import 'stats-formulas';
 
 header {
 	display: flex;
@@ -285,4 +286,14 @@ footer {
         }
     }
 
+}
+
+@media screen and (max-width: 500px) {
+    header {
+
+
+        .menu {
+            display: none;
+        }
+    }
 }
