--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -11,10 +11,10 @@
     }
 }
 
-.btn-primary {
-    @extend %btn;
-    background-color: $primary-color;
-}
+//.btn-primary {
+//    @extend %btn;
+ //   background-color: $primary-color;
+//}
 
 .btn-primary-dark {
     @extend %btn;
