--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 @import 'buttons';
 @import 'stats-formulas';
 @import 'mean';
-@import 'mode';
+@import 'permutations';
 
 header {
 	display: flex;
