--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 @import 'base';
 @import 'buttons';
 @import 'stats-formulas';
-@import 'mean';
+@import 'stats';
 @import 'permutations';
 
 header {
